--- a/Rebels.csproj
+++ b/Rebels.csproj
@@ -4,26 +4,11 @@
 		<Configurations>1.3;1.3_DEBUG;1.4;1.4_DEBUG</Configurations>
 		<ModSharedProps>$(ProjectDir)Shared.mod.props.csproj</ModSharedProps>
 	</PropertyGroup>
-	
+
 	<Import Project="$(ModSharedProps)" />
-	
+
 	<ItemGroup>
-	  <None Remove="Assets\LoadFolders.xml" />
+		<Reference Include="FactionExtensionCore" Private="true" HintPath="libs\FactionExtensionCore.dll" />
 	</ItemGroup>
-	
-	<ItemGroup>
-	  <UpToDateCheckInput Remove="Assets\LoadFolders.xml" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <Content Include="Assets\LoadFolders.xml" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <Reference Include="FactionExtensionCore">
-	    <HintPath>libs\FactionExtensionCore.dll</HintPath>
-	    <Private>True</Private>
-	  </Reference>
-	</ItemGroup>
-	
+
 </Project>
